--- a/11.02.23-HTTPSandforms.md
+++ b/11.02.23-HTTPSandforms.md
@@ -39,3 +39,7 @@ Request Parrot
 ok listen to this lecture acgain especially around 7:02 PM because it covers stuff about getting usernames etc
 good info for assignment 5 and stuff?WHATS GOING ON IMSOLOST
 
+toggling between an elements visibility also covered ;-;
+
+
+
